Make ZipBuy runnable, secure and showcase-ready
Backend
- Hash passwords with BCrypt and never return them in responses
- Read database settings from environment variables instead of
  committing credentials
- Fix product listing returning empty objects
- Fix cart lookups, add PUT /api/cart/update, return cart DTOs
- Add JSON error responses (400/404/409) and input validation
- Seed demo categories and products on first start
- Add Maven wrapper, Dockerfile and integration tests

Frontend
- Replace six duplicated product components with one ProductList
- Read the API URL from REACT_APP_API_URL
- Fix deep links and refreshes redirecting to the home page
- Fix cart quantity updates, add remove, show add-to-cart feedback
- Finish the date of birth check and go to login after registering
- Replace hotlinked carousel images with local banners
- Add component tests

Project
- Docker Compose for MySQL + API + app, GitHub Actions CI,
  .gitignore, screenshots and a full README

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01CWwSEqxsDMM9sfbmuCfeAN